--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,89 @@
 body {
-    background-image: url(../images/interlaced.png);
-    text-align: center;
-    margin: 0px;
+    background-image: url("../images/interlaced.png");
+    background-repeat: repeat;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #777777;
 }
 
-button {
-    background-color: #4aaaa5;
-    color: #ffffff;
-    padding: 10px;
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #4aaaa5;
+}
+
+hr {
+    height: 2px;
+    color: #dddddd;
+    background-color: #dddddd;
+    margin-bottom: 30px;
+}
+
+img {
+    width: 300px;
 }
 
 footer {
     border-top: 5px solid #4aaaa5;
     background-color: #666666;
     color: #ffffff;
-    padding: 25px;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
     text-align: center;
+    
+} 
+
+nav {
+    border-bottom: #dddddd solid 2px;
+}
+
+p {
+    margin-left: 10px;
+}
+
+.borderRight {
+    border-right: #dddddd solid 1px;
+}
+
+.navOptions {
+    margin-right: 200px;
+}
+
+
+.navTitle {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    margin-left: 200px;
+}
+
+.mainSection {
+    background-color: #ffffff;
+    margin: 30px 200px 100px;
+}
+
+.teal {
+    background-color: #4aaaa5;
+    color: #ffffff;
+}
+
+#headShot {
+    max-width: 200px;
+    margin: 10px 50px 20px 0px;
+}
+
+.img-thumbnail {
+    margin: 10px;
+}
+
+/*button {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 10px;
 }
 
 h1 {
     background-color: #4aaaa5;
-    color: #ffffff;
+    /*color: #ffffff;
     float: left;
     margin: 0px 0px 0px 0px;
     padding: 20px;
-}
+} 
 
 h2 {
     color: #4aaaa5;
@@ -106,7 +161,6 @@ td {
 .relativePosition {
     position: relative;
     width: 300px;
-    /* margin: 30px 0px 30px 0px; */
 }
 
 .absolutePosition {
@@ -142,6 +196,6 @@ td {
   }
 
   .w960 {
-    margin:auto;
+    margin:auto; 
     width:960px;
-}
+}  */
